Removed last remenants of Pod::HTML usage replaced with Pod::POM
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@152 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/frames.html.tmpl
+++ b/data/templates/default/frames.html.tmpl
@@ -40,6 +40,6 @@
 	</head>
 	<frameset cols="255,*" onload=" setTimeout( title, [% animation %] ); ">
 		<frame name="menu" src="?page=list"></frame>
-		<frame name="main" src="?page=text&amp;module=[% module %]"></frame>
+		<frame name="main" src="?page=pod&amp;module=[% module %]"></frame>
 	</frameset>
 </html>
