--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -14,7 +14,7 @@
 		<style type="text/css">
 		<!--/* <![CDATA[ */
 			@import url("?page=common.css");
-			@import url("?page=[% style || 'cpan' %].css");
+			@import url("?page=[% StyleSheet || 'cpan' %].css");
 		/* ]]> */-->
 		</style>
 		<script type="text/javascript">
@@ -30,7 +30,9 @@
 				<tr>
 					<th>[% IF !first %][% first = 1 %][% module %][% END %]</th>
 					<td><a title="Documentation [% module %]"  href="?page=pod&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> POD </a></td>
+		[%- IF show_text -%]
 					<td><a title="Documentation [% module %]"  href="?page=text&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> Text </a></td>
+		[%- END -%]
 					<td>
 		[%- UNLESS source.suffix == 'pod' -%]
 					<a title="Functions defined, modules used, inheritance etc" href="?page=api&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> API </a>
