--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -1,5 +1,5 @@
-/* 
- * 
+/*
+ *
  */
 
 pre {
@@ -14,6 +14,9 @@ h1, h2, h3, h4, h5, h6 {
 	background-color:	#ADA;
 	font-family:		serif;
 	-moz-border-radius:	5px;
+}
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+	text-decoration:	none;
 }
 h1 {
 	padding-left:		4px;
