Updated old style css to better work with new POM generated POD
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@153 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -1,44 +1,79 @@
 /*
+ *  Author: Ivan Wills
+ *  Copyright: Ivan Wills (c) 2006, 2007
  *
  */
 
 pre {
-	background-color:	#EEE;
-	border:				solid 1px black;
-	padding:			2px;
+	background-color:   #EEE;
+	border:             solid 1px black;
+	padding:            2px;
 }
 body {
-	font-family:		sans-serif;
+	font-family:        sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-	background-color:	#ADA;
-	font-family:		serif;
-	-moz-border-radius:	5px;
+	background-color:   #ADA;
+	font-family:        serif;
+	-moz-border-radius: 5px;
 }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-	text-decoration:	none;
+	text-decoration:    none;
+	color:              black;
+}
+h1 a img {
+	display:            none;
 }
 h1 {
-	padding-left:		4px;
+	padding-left:       4px;
 }
 h2 {
-	padding-left:		8px;
-	background-color:	#BBC5BB;
+	padding-left:       8px;
+	background-color:   #BBC5BB;
 }
 h3 {
-	padding-left:		12px;
+	padding-left:       12px;
 }
 h4 {
-	padding-left:		16px;
+	padding-left:       16px;
 }
 hr {
 }
 
 dl dl {
-	margin-left:		2em;
+	margin-left:        2em;
 }
 
 td {
-	padding-left:		2px;
-	padding-right:		2px;
+	padding-left:       2px;
+	padding-right:      2px;
+}
+ul.menu, ul.menu ul {
+	list-style-type:    none;
+}
+ul.menu li, ul.menu ul li {
+	list-style-type:    none;
+}
+li.level1 a,
+li.level2 a,
+li.level3 a,
+li.level4 a {
+	color:              blue;
+	font-size:          1.2em;
+}
+li.level1 {
+	padding-left:       0em;
+	font-size:          1.1em;
+}
+li.level2 {
+	padding-left:       3em;
+	font-size:          1.0em;
+}
+li.level3 {
+	padding-left:       6em;
+	font-size:          0.9em;
+}
+li.level4 {
+	padding-left:       9em;
+	font-size:          0.8em;
 }
