--- a/data/templates/default/cpan.css.tmpl
+++ b/data/templates/default/cpan.css.tmpl
@@ -1,4 +1,4 @@
-/** 
+/**
  *  Author: Ivan Wills
  *  Copyright: Ivan Wills (c) 2007
  *
@@ -12,7 +12,7 @@ pre {
 	font-size:          9pt;
 }
 code {
-	font-weith:         lighter;
+	font-weight:        lighter;
 }
 body {
 	font-family:        arial,sans-serif;
@@ -25,8 +25,6 @@ h1, h2, h3, h4, h5, h6 {
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	text-decoration:    none;
 	color:              #069;
-}
-h1:after, h2:after, h3:after, h4:after, h5:after, h6:after {
 }
 h1 {
 	font-size:          large;
