Made the background colours of headdings more consistent
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@155 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -33,9 +33,11 @@ h2 {
 }
 h3 {
 	padding-left:       12px;
+	background-color:   #B6E6B6;
 }
 h4 {
 	padding-left:       16px;
+	background-color:   #CCEECC;
 }
 hr {
 }
