Bug 1668673: Fixed headder links to top of page
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@156 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -24,7 +24,7 @@
 		</script>
 	</head>
 	<body>
-		<div id="headding">
+		<div id="headding" style="position: fixed; background-color: white">
 			<table style="width:100%; vertical-align:middle; text-align: center; clear: both; ">
 	[%- FOR source = sources -%]
 				<tr>
@@ -48,8 +48,11 @@
 			<pre>
 				[%# DUMP %]
 			</pre>
+			<hr style="margin-bottom: 0px" />
 		</div>
-		<hr/>
+	[% FOR source = sources -%]
+		<br/>
+	[%- END -%]
 		<div id="content">
 		[% content %]
 		</div>
