--- a/data/templates/default/cpan.css.tmpl
+++ b/data/templates/default/cpan.css.tmpl
@@ -29,12 +29,12 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 h1 {
 	font-size:          large;
 }
-h1 img {
+h1 div.up {
 	border:             1px solid;
 	height:             16px;
 	width:              16px;
-	overflow:           none;
-	font-size:          smaller;
+	display:            inline;
+	font-size:          smaller
 }
 h2 {
 	font-size:          medium;
