--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -21,7 +21,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	text-decoration:    none;
 	color:              black;
 }
-h1 a img {
+h1 a div.up {
 	display:            none;
 }
 h1 {
