Bug 1666618: Added line number and file size to API page
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@159 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/api.html.tmpl
+++ b/data/templates/default/api.html.tmpl
@@ -62,6 +62,10 @@
 			</tr>
 			[% END -%]
 			<tr>
+				<th>File</th>
+				<td colspan="[% ApiColumns %]">[% api.size %] bytes, [% api.lines %] lines</td>
+			</tr>
+			<tr>
 				<th>Contains POD</th>
 				<td colspan="[% ApiColumns %]">[% IF api.pod %][% api.pod %] Lines[% ELSE %]No POD[% END %]</td>
 			</tr>
