--- a/data/templates/default/api.html.tmpl
+++ b/data/templates/default/api.html.tmpl
@@ -181,47 +181,49 @@
 		<!--pre>[%# DUMP %]</pre-->
 		<br />
 		<br />
-		<div style="clear:both;font-size:0.8em">
+		<div id="note">
 			<b>Note:</b> This API is just a guess on the meaning of the subroutines in the file.<br />
-			<div style="clear:both;">
-				<i>Class Methods</i> are assumed be in one of the following forms:
-				<pre style="width:18em;float: left">
+			<div id="details">
+				<div>
+					<i>Class Methods</i> are assumed be in one of the following forms:
+					<pre style="width:18em;float: left">
 sub class_method {
 	my $class = shift;
 	...
 }</pre>
-				<div style="float:left;padding:5px"><br />or</div>
-				<pre style="width:18em;float: left">
+					<div style="float:left;padding:5px"><br />or</div>
+					<pre style="width:18em;float: left">
 sub class_method {
 	my $caller = shift;
 	...
 }</pre>
-			</div>
-			<div style="clear:both;">
-				<i>Object Methods</i> are assumed to be in one of the following forms:
-				<pre style="width:18em;float: left">
+				</div>
+				<div style="clear:both;">
+					<i>Object Methods</i> are assumed to be in one of the following forms:
+					<pre style="width:18em;float: left">
 sub object_method {
 	my $self = shift;
 	...
 }</pre>
-				<div style="float:left;padding:5px"><br />or</div>
-				<pre style="width:18em;float: left">
+					<div style="float:left;padding:5px"><br />or</div>
+					<pre style="width:18em;float: left">
 sub object_method {
 	my $this = shift;
 	...
 }</pre>
-				<div style="float:left;padding:5px;clear:left;"><br />or</div>
-				<pre style="width:20em;float: left">
+					<div style="float:left;padding:5px;clear:left;"><br />or</div>
+					<pre style="width:20em;float: left">
 sub object_method {
 	my ( $self, ... ) = @_;
 	...
 }</pre>
-				<div style="float:left;padding:5px"><br />or</div>
-				<pre style="width:20em;float: left">
+					<div style="float:left;padding:5px"><br />or</div>
+					<pre style="width:20em;float: left">
 sub object_method {
 	my ( $this, ... ) = @_;
 	...
 }</pre>
+				</div>
 			</div>
 		</div>
 	</div>
