--- a/data/templates/default/common.css.tmpl
+++ b/data/templates/default/common.css.tmpl
@@ -38,6 +38,7 @@ body {
 #headding table th {
 	text-align:         left;
 	padding-left:       5px;
+	font-stretch:       wider;
 }
 #headding table td {
 	text-align:         right;
