--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -15,49 +15,76 @@
 		<!--/* <![CDATA[ */
 			@import url("?page=common.css");
 			@import url("?page=[% StyleSheet || 'cpan' %].css");
+			#file_2,
+			#file_3,
+			#file_4,
+			#file_5,
+			#file_6 {
+				display: none;
+			}
 		/* ]]> */-->
 		</style>
 		<script type="text/javascript">
 		<!--
+			var current_file = 1;
+			function change_file() {
+				var select  = document.getElementById('file_selector');
+				var index   = select.selectedIndex;
+				var current = document.getElementById('file_' + current_file);
+				var next    = document.getElementById('file_' + select.options[index].value);
 
+				current.style.display = 'none';
+				next.style.display    = 'block';
+			}
 		//-->
 		</script>
 	</head>
 	<body>
 		<div id="headding">
 			<table>
-	[%- FOR source = sources -%]
 				<tr>
-		[%- IF !first %][% first = 1 %]
+	[%- IF !first %][% first = 1 %]
 					<th rowspan="[% sources.size %]">[% module %]</th>
-		[% END %]
+	[% END %]
 					<td>
-		[%- IF sources.size > 1 %]
-						[% source.file %]:
-		[%- END -%]
-						<a title="Documentation [% module %]"  href="?page=pod&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> POD </a>
+	[%- file_count = 0 %]
+	[%- FOR source = sources -%]
+		[%- file_count = file_count + 1 %]
+						<div id="file_[% file_count %]" style="float: right">
+							<a title="Documentation [% module %]"  href="?page=pod&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> POD </a>
 		[%- IF show_text %]
-						| <a title="Documentation [% module %]"  href="?page=text&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> Text </a>
+							| <a title="Documentation [% module %]"  href="?page=text&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> Text </a>
 		[%- END -%]
 		[%- UNLESS source.suffix == 'pod' %]
-						| <a title="Functions defined, modules used, inheritance etc" href="?page=api&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> API </a>
+							| <a title="Functions defined, modules used, inheritance etc" href="?page=api&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> API </a>
 		[%- END %]
-						| <a title="View source code" href="?page=code&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]">CODE</a>
+							| <a title="View source code" href="?page=code&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]">CODE</a>
 		[%- IF location != 'local' %]
-						| <a title="See latest documentation on CPAN" href="http://search.cpan.org/search?query=[% IF location == 'perl' %]pod::[% END %][% module %]&amp;mode=module"> CPAN</a>
+							| <a title="See latest documentation on CPAN" href="http://search.cpan.org/search?query=[% IF location == 'perl' %]pod::[% END %][% module %]&amp;mode=module"> CPAN</a>
 		[%- END %]
+						</div>
+	[%- END -%]
+	[%- IF sources.size > 1 %]
+						<div style="display: block; float: right">&nbsp;:&nbsp;</div>
+		[%- file_count = 0 %]
+						<div style="display: block; float: right">
+							<select id="file_selector" onchange="change_file();">
+		[%- FOR source = sources -%]
+			[%- file_count = file_count + 1 %]
+								<option value="[% file_count %]">[% source.file %]</option>
+		[%- END %]
+							</select>
+						</div>
+	[%- END -%]
 					</td>
 				</tr>
-	[%- END -%]
 			</table>
 			<pre>
 				[%# DUMP %]
 			</pre>
 			<hr/>
 		</div>
-	[% FOR source = sources -%]
 		<br/>
-	[%- END -%]
 		<div id="content">
 		[% content %]
 		</div>
