--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -15,13 +15,18 @@
 		<!--/* <![CDATA[ */
 			@import url("?page=common.css");
 			@import url("?page=[% StyleSheet || 'cpan' %].css");
-			#file_2,
-			#file_3,
-			#file_4,
-			#file_5,
-			#file_6 {
+	[%- IF sources.size > 1 %]
+		[%- file_count = 0 %]
+		[%- FOR src = sources -%]
+			[%- file_count = file_count + 1 %]
+			[%- IF src.file != source %]
+			#file_[% file_count %],
+			[%- END %]
+		[%- END %]
+			#file_[% file_count + 1 %] {
 				display: none;
 			}
+	[%- END %]
 		/* ]]> */-->
 		</style>
 		<script type="text/javascript">
@@ -33,8 +38,12 @@
 				var current = document.getElementById('file_' + current_file);
 				var next    = document.getElementById('file_' + select.options[index].value);
 
+				//alert(current_file + ': ' + current.style.display);
 				current.style.display = 'none';
+				//alert(current_file + ': ' + current.style.display);
+				//alert(select.options[index].value + ': ' + next.style.display);
 				next.style.display    = 'block';
+				//alert(select.options[index].value + ': ' + next.style.display);
 			}
 		//-->
 		</script>
@@ -48,19 +57,40 @@
 	[% END %]
 					<td>
 	[%- file_count = 0 %]
-	[%- FOR source = sources -%]
+	[%- FOR src = sources -%]
 		[%- file_count = file_count + 1 %]
 						<div id="file_[% file_count %]" style="float: right">
-							<a title="Documentation [% module %]"  href="?page=pod&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> POD </a>
+			[%- UNLESS src.file == source and page == 'pod' %]
+							<a title="Documentation [% module %]"  href="?page=pod&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% src.file %]">
+			[%- ELSE -%]<b>
+			[%- END -%]POD
+			[%- IF src.file == source and page == 'pod' -%]</b>[%- ELSE -%]</a>[%- END %]
 		[%- IF show_text %]
-							| <a title="Documentation [% module %]"  href="?page=text&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> Text </a>
+							|
+			[%- UNLESS src.file == source and page == 'text' %]
+							<a title="Documentation [% module %]"  href="?page=text&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% src.file %]">
+			[%- ELSE -%]<b>
+			[%- END -%]Text
+			[%- IF src.file == source and page == 'text' -%]</b>[%- ELSE -%]</a>[%- END %]
 		[%- END -%]
-		[%- UNLESS source.suffix == 'pod' %]
-							| <a title="Functions defined, modules used, inheritance etc" href="?page=api&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]"> API </a>
+		[%- UNLESS src.suffix == 'pod' %]
+							|
+			[%- UNLESS src.file == source and page == 'api' %]
+							<a title="Functions defined, modules used, inheritance etc" href="?page=api&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% src.file %]">
+			[%- ELSE -%]<b>
+			[%- END -%]API
+			[%- IF src.file == source and page == 'api' -%]</b>[%- ELSE -%]</a>[%- END %]
 		[%- END %]
-							| <a title="View source code" href="?page=code&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% source.file %]">CODE</a>
+							|
+			[%- UNLESS src.file == source and page == 'code' %]
+							<a title="View source code" href="?page=code&amp;module=[% module %]&amp;file=[% file %]&amp;location=[% location %]&amp;source=[% src.file %]">
+			[%- ELSE -%]<b>
+			[%- END -%]CODE
+			[%- IF src.file == source and page == 'code' -%]</b>[%- ELSE -%]</a>[%- END %]
 		[%- IF location != 'local' %]
-							| <a title="See latest documentation on CPAN" href="http://search.cpan.org/search?query=[% IF location == 'perl' %]pod::[% END %][% module %]&amp;mode=module"> CPAN</a>
+							| <a title="See latest documentation on CPAN" href="http://search.cpan.org/search?query=[% IF location == 'perl' %]pod::[% END %][% module %]&amp;mode=module">
+								CPAN
+							</a>
 		[%- END %]
 						</div>
 	[%- END -%]
@@ -69,9 +99,9 @@
 		[%- file_count = 0 %]
 						<div style="display: block; float: right">
 							<select id="file_selector" onchange="change_file();">
-		[%- FOR source = sources -%]
+		[%- FOR src = sources -%]
 			[%- file_count = file_count + 1 %]
-								<option value="[% file_count %]">[% source.file %]</option>
+								<option value="[% file_count %]"[% IF src.file == source %] selected="selected"[% END %]>[% src.file %]</option>
 		[%- END %]
 							</select>
 						</div>
