--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -15,12 +15,15 @@
 		<!--/* <![CDATA[ */
 			@import url("?page=common.css");
 			@import url("?page=[% StyleSheet || 'cpan' %].css");
+	[% current_file = 0 %]
 	[%- IF sources.size > 1 %]
 		[%- file_count = 0 %]
 		[%- FOR src = sources -%]
 			[%- file_count = file_count + 1 %]
 			[%- IF src.file != source %]
 			#file_[% file_count %],
+			[%- ELSE -%]
+				[%- current_file = file_count -%]
 			[%- END %]
 		[%- END %]
 			#file_[% file_count + 1 %] {
@@ -31,7 +34,7 @@
 		</style>
 		<script type="text/javascript">
 		<!--
-			var current_file = 1;
+			var current_file = [% current_file %];
 			function change_file() {
 				var select  = document.getElementById('file_selector');
 				var index   = select.selectedIndex;
@@ -44,6 +47,7 @@
 				//alert(select.options[index].value + ': ' + next.style.display);
 				next.style.display    = 'block';
 				//alert(select.options[index].value + ': ' + next.style.display);
+				current_file = select.options[index].value;
 			}
 		//-->
 		</script>
